# QuranApp-Linux

./: .gitignore  CMakeLists.txt  README.md  install.sh  qapp.desktop
database/: Chapters.txt  quran.db  quran_albanian.db  quran_azerbaijani.db  quran_bengali.db  quran_czech.db  quran_dutch.db  quran_english.db  quran_farsi.db  quran_french.db  quran_german.db  quran_hausa.db  quran_hindi.db  quran_indonesian.db  quran_japanese.db  quran_korean.db  quran_kurdish.db  quran_maldivian.db  quran_norwegian.db  quran_polish.db  quran_portuguese.db  quran_romanian.db  quran_russian.db  quran_sindhi.db  quran_spanish.db  quran_swahili.db  quran_tajik.db  quran_thai.db  quran_turkish.db  quran_urdu.db  quran_uyghur.db  quran_uzbek.db
src/: audio_stream.cpp  audio_stream.hpp  curl_parser.cpp  curl_parser.hpp  db_reader.cpp  db_reader.hpp  interface.cpp  interface.hpp  main.cpp  parser.cpp  translations.hpp  window.cpp  window.hpp
src/json/: README.md
